Fixed comments initials from wrapping by adding media queries to shrink the max width of the comment description as the screen shrinks in the .comment-div container

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -49,6 +49,15 @@ ul.comment-list-group {
   max-width:                  90%;
   min-width:                  80%;
   
+  @media only screen and (max-width: 620px) {
+    max-width:              80%;
+    min-width:              40%;
+  }
+  
+  @media only screen and (max-width: 420px) {
+    max-width:              70%;
+    min-width:              40%;
+  }
   
   p {
     margin:                   0.10em 0 0 0;
